--- a/Martify/Views/AddEmployee.xaml
+++ b/Martify/Views/AddEmployee.xaml
@@ -6,10 +6,11 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:uc="clr-namespace:Martify.Views"
-        xmlns:vm="clr-namespace:Martify.ViewModels"
+        xmlns:vm="clr-namespace:Martify.ViewModels"        
+        xmlns:cv="clr-namespace:Martify.Converters"
         mc:Ignorable="d"
         Name="addEmployeeWindow"
-        Title="AddEmployee" Height="500" Width="700"
+        Title="AddEmployee" Height="525" Width="700"
         WindowStyle="None"
         Background="Transparent"
         AllowsTransparency="True"
@@ -27,6 +28,8 @@
             <Setter Property="FontWeight" Value="SemiBold" />
             <Setter Property="FontSize" Value="14" />
         </Style>
+
+        <cv:ImagePathConverter x:Key="ImgConverter"/>
     </Window.Resources>
 
     <Grid>
@@ -43,9 +46,9 @@
 
             <Border Grid.Column="1" Padding="20" Background="#ffffff" CornerRadius="0 25 25 0">
                 <Grid>
-                    <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 -10 0 0">
+                    <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="150"/> <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="150"/> <ColumnDefinition Width="200"/>
                         </Grid.ColumnDefinitions>
 
                         <Grid.RowDefinitions>
@@ -55,6 +58,9 @@
                             <RowDefinition Height="60"/>
                             <RowDefinition Height="60"/>
                             <RowDefinition Height="60"/>
+                            <RowDefinition Height="60"/>
+
+                            <RowDefinition Height="60"/>
                         </Grid.RowDefinitions>
 
                         <TextBlock Grid.Row="0" Text="Họ và tên" Style="{StaticResource text}"/>
@@ -63,6 +69,7 @@
                         <TextBlock Grid.Row="3" Text="Email liên hệ" Style="{StaticResource text}"/>
                         <TextBlock Grid.Row="4" Text="Giới tính" Style="{StaticResource text}"/>
                         <TextBlock Grid.Row="5" Text="Ngày sinh" Style="{StaticResource text}"/>
+                        <TextBlock Grid.Row="6" Text="Ngày vào làm" Style="{StaticResource text}"/>
 
                         <Grid Grid.Column="1" Grid.Row="0">
                             <TextBox Height="40" VerticalAlignment="Center"
@@ -136,48 +143,139 @@
                                         Style="{StaticResource MaterialDesignOutlinedDatePicker}" 
                                         Padding="10" FontSize="12" Language="vi-VN"/>
                         </Grid>
+
+                        <Grid Grid.Column="1" Grid.Row="6">
+                            <DatePicker Height="40"
+                                        SelectedDate="{Binding HireDate, UpdateSourceTrigger=PropertyChanged}"
+                                        materialDesign:HintAssist.Hint="01/01/2000"
+                                        materialDesign:HintAssist.IsFloating="False"
+                                        Style="{StaticResource MaterialDesignOutlinedDatePicker}" 
+                                        Padding="10" FontSize="12" Language="vi-VN"/>
+                        </Grid>
+
+
+                        <Grid Grid.Column="1" Grid.Row="7">
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom">
+                                <Button Height="40" Width="95"
+                                        Margin="0,0,10,0"
+                                        materialDesign:ButtonAssist.CornerRadius="10"
+                                        Style="{StaticResource MaterialDesignRaisedButton}" 
+                                        Foreground="Black" BorderBrush="{x:Null}" IsDefault="False"
+                                        Command="{Binding CloseCommand}"
+                                        CommandParameter="{Binding ElementName=addEmployeeWindow}">
+                                    <Button.Background>
+                                        <LinearGradientBrush StartPoint="0,0.2" EndPoint="1,0.8">
+                                            <GradientStop Color="Black" Offset="1"/>
+                                            <GradientStop Color="#FFE8E8E8" Offset="0"/>
+                                            <GradientStop Color="#FFF8F96E" Offset="0.999"/>
+                                            <GradientStop Color="#FFB9B9B9" Offset="0.996"/>
+                                        </LinearGradientBrush>
+                                    </Button.Background>
+                                    <TextBlock Text="Hủy bỏ" FontFamily="Times New Roman" FontSize="14"/>
+                                </Button>
+
+                                <Button Height="40" Width="95"
+                                        materialDesign:ButtonAssist.CornerRadius="10"
+                                        Style="{StaticResource MaterialDesignRaisedButton}" 
+                                        Foreground="White" BorderBrush="{x:Null}" IsDefault="True"
+                                        Command="{Binding SaveCommand}"
+                                        CommandParameter="{Binding ElementName=addEmployeeWindow}">
+                                    <Button.Background>
+                                        <LinearGradientBrush StartPoint="0,0.2" EndPoint="1,0.8">
+                                            <GradientStop Color="#FF86E5A0" Offset="0.948"/>
+                                            <GradientStop Color="#FF84E1A9" Offset="0.147"/>
+                                            <GradientStop Color="#FF66E76F" Offset="0.514"/>
+                                        </LinearGradientBrush>
+                                    </Button.Background>
+                                    <TextBlock Text="Xác nhận" FontFamily="Times New Roman" FontSize="14"/>
+                                </Button>
+                            </StackPanel>
+                        </Grid>
                     </Grid>
 
-                    <Grid>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                            <Button Height="40" Margin="0,0,10,0"
-                                    materialDesign:ButtonAssist.CornerRadius="10"
-                                    Style="{StaticResource MaterialDesignRaisedButton}" 
-                                    Foreground="White" BorderBrush="{x:Null}" IsDefault="False"
-                                    Command="{Binding CloseCommand}"
-                                    CommandParameter="{Binding ElementName=addEmployeeWindow}">
-                                <Button.Background>
-                                    <LinearGradientBrush StartPoint="0,0.2" EndPoint="1,0.8">
-                                        <GradientStop Color="Black" Offset="1"/>
-                                        <GradientStop Color="#FF0B0B0B" Offset="0"/>
-                                        <GradientStop Color="#FFF8F96E" Offset="0.999"/>
-                                        <GradientStop Color="#FFF1F193" Offset="0.996"/>
-                                    </LinearGradientBrush>
-                                </Button.Background>
-                                <TextBlock Text="Hủy bỏ" FontFamily="Times New Roman" FontSize="14"/>
-                            </Button>
 
-                            <Button Height="40"
-                                    materialDesign:ButtonAssist.CornerRadius="10"
-                                    Style="{StaticResource MaterialDesignRaisedButton}" 
-                                    Foreground="White" BorderBrush="{x:Null}" IsDefault="True"
-                                    Command="{Binding SaveCommand}"
-                                    CommandParameter="{Binding ElementName=addEmployeeWindow}">
-                                <Button.Background>
-                                    <LinearGradientBrush StartPoint="0,0.2" EndPoint="1,0.8">
-                                        <GradientStop Color="Black" Offset="1"/>
-                                        <GradientStop Color="#FF5463E2" Offset="0"/>
-                                        <GradientStop Color="#FF6ECCF9" Offset="0.999"/>
-                                    </LinearGradientBrush>
-                                </Button.Background>
-                                <TextBlock Text="Xác nhận thêm" FontFamily="Times New Roman" FontSize="14"/>
-                            </Button>
-                        </StackPanel>
-                    </Grid>
                 </Grid>
             </Border>
+
+
+
+            <Grid Grid.Column="0">
+
+                <Ellipse Width="150" Height="150" 
+                         HorizontalAlignment="Center" 
+                         VerticalAlignment="Top"
+                         Margin="0,75,0,0">
+                    <Ellipse.Fill>
+                        <ImageBrush Stretch="UniformToFill">
+                            <ImageBrush.ImageSource>
+                                <Binding Path="SelectedImagePath" 
+                                         Converter="{StaticResource ImgConverter}"
+                                         TargetNullValue="{StaticResource Anonymous}"
+                                         FallbackValue="{StaticResource Anonymous}"/>
+                            </ImageBrush.ImageSource>
+                        </ImageBrush>
+                    </Ellipse.Fill>
+                </Ellipse>
+
+                <Grid Width="150" Height="120"
+                      VerticalAlignment="Center"
+                      HorizontalAlignment="Center"
+                      Margin="0,100,0,0">
+                    <TextBlock FontSize="14" Margin="0,10,0,0" TextAlignment="Justify" TextWrapping="Wrap"
+                                   Text="Nhấp vào nút dưới để chọn ảnh cho nhân viên. Nếu không chọn, sẽ hiển thị ảnh mặc định như hình bên trên.">
+                    </TextBlock>
+                </Grid>
+                
+                
+                
+                
+                <Grid Width="50" Height="50"
+                      VerticalAlignment="Center"
+                      HorizontalAlignment="Center"
+                      Margin="0,300,0,0">
+                    <Button Height="50" Width="50"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"
+                            materialDesign:ButtonAssist.CornerRadius="50"
+                            Style="{StaticResource MaterialDesignRaisedButton}"
+                            Command="{Binding SelectImageCommand}"
+                            CommandParameter="{Binding ElementName=addEmployeeWindow}" 
+                            BorderBrush="{x:Null}" Foreground="{x:Null}">
+                        <Button.Background>
+                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                <GradientStop Color="#FFD3CECE"/>
+                                <GradientStop Color="#FFE5DADA" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Button.Background>
+
+
+                    </Button>
+
+                    <Image Source="{StaticResource UploadImage}"
+                           Width="30" Height="30"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Center"
+                           IsHitTestVisible="False">
+                    </Image>
+                </Grid>
+                
+            </Grid>
+            
         </Grid>
 
-        <uc:WindowControl VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,5,5,0"/>
+
+
+
+        <Grid x:Name="DragZone"
+              Background="Transparent"
+              Width="700" Height="30"
+              VerticalAlignment="Top">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseLeftButtonDown">
+                    <i:InvokeCommandAction Command="{Binding DragWindowCommand}"
+                                       CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </Grid>
     </Grid>
 </Window>
