--- a/Martify/Views/AddEmployee.xaml
+++ b/Martify/Views/AddEmployee.xaml
@@ -30,6 +30,27 @@
         </Style>
 
         <cv:ImagePathConverter x:Key="ImgConverter"/>
+
+        <ControlTemplate x:Key="ErrorTemplate">
+            <StackPanel>
+                <AdornedElementPlaceholder x:Name="placeholder" />
+
+                <TextBlock Text="{Binding [0].ErrorContent}" 
+                           Foreground="Red" 
+                           FontSize="10" 
+                           Margin="0,2,0,0"
+                           HorizontalAlignment="Left"
+                           FontStyle="Italic"/>
+            </StackPanel>
+        </ControlTemplate>
+
+        <Style x:Key="ValidatedTextBox" TargetType="TextBox" BasedOn="{StaticResource MaterialDesignOutlinedTextBox}">
+            <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ErrorTemplate}" />
+        </Style>
+
+        <Style x:Key="ValidatedDatePicker" TargetType="DatePicker" BasedOn="{StaticResource MaterialDesignOutlinedDatePicker}">
+            <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ErrorTemplate}" />
+        </Style>
     </Window.Resources>
 
     <Grid>
@@ -39,16 +60,17 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Border Background="#FFD500" Padding="30" CornerRadius="25 0 0 25">
+            <Border Background="#FFD500" Padding="30" CornerRadius="25 25 25 25">
                 <StackPanel VerticalAlignment="Center">
-                    </StackPanel>
+                </StackPanel>
             </Border>
 
-            <Border Grid.Column="1" Padding="20" Background="#ffffff" CornerRadius="0 25 25 0">
+            <Border Grid.Column="1" Padding="20" Background="#ffffff" CornerRadius="25 25 25 25">
                 <Grid>
                     <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="150"/> <ColumnDefinition Width="200"/>
+                            <ColumnDefinition Width="150"/>
+                            <ColumnDefinition Width="200"/>
                         </Grid.ColumnDefinitions>
 
                         <Grid.RowDefinitions>
@@ -59,7 +81,6 @@
                             <RowDefinition Height="60"/>
                             <RowDefinition Height="60"/>
                             <RowDefinition Height="60"/>
-
                             <RowDefinition Height="60"/>
                         </Grid.RowDefinitions>
 
@@ -73,51 +94,47 @@
 
                         <Grid Grid.Column="1" Grid.Row="0">
                             <TextBox Height="40" VerticalAlignment="Center"
-                                     Text="{Binding FullName, UpdateSourceTrigger=PropertyChanged}"
+                                     Text="{Binding FullName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                      materialDesign:HintAssist.Hint="Nguyễn Văn A"
                                      materialDesign:HintAssist.IsFloating="False"
-                                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                                     Style="{StaticResource ValidatedTextBox}"
                                      Padding="10" FontSize="12" FontFamily="Times New Roman"/>
                         </Grid>
 
                         <Grid Grid.Column="1" Grid.Row="1">
                             <TextBox Height="40" VerticalAlignment="Center"
-                                     Text="{Binding Address, UpdateSourceTrigger=PropertyChanged}"
+                                     Text="{Binding Address, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                      materialDesign:HintAssist.Hint="Quận 1, TP Hồ Chí Minh"
                                      materialDesign:HintAssist.IsFloating="False"
-                                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                                     Style="{StaticResource ValidatedTextBox}"
                                      Padding="10" FontSize="12" FontFamily="Times New Roman"/>
                         </Grid>
 
                         <Grid Grid.Column="1" Grid.Row="2">
                             <TextBox Height="40" VerticalAlignment="Center"
-                                     Text="{Binding Phone, UpdateSourceTrigger=PropertyChanged}"
+                                     Text="{Binding Phone, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                      materialDesign:HintAssist.Hint="01223334444"
                                      materialDesign:HintAssist.IsFloating="False"
-                                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                                     Style="{StaticResource ValidatedTextBox}"
                                      Padding="10" FontSize="12" FontFamily="Times New Roman"/>
                         </Grid>
 
                         <Grid Grid.Column="1" Grid.Row="3">
                             <TextBox Height="40" VerticalAlignment="Center"
-                                     Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"
+                                     Text="{Binding Email, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                      materialDesign:HintAssist.Hint="abcxyz123456@gmail.com"
                                      materialDesign:HintAssist.IsFloating="False"
-                                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                                     Style="{StaticResource ValidatedTextBox}"
                                      Padding="10" FontSize="12" FontFamily="Times New Roman"/>
                         </Grid>
 
                         <Grid Grid.Column="1" Grid.Row="4">
                             <ListBox x:Name="GenderListBox" 
                                      Style="{StaticResource MaterialDesignToolToggleListBox}"
-                                     Height="40" HorizontalAlignment="Left" Margin="0 10">
-                                
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="SelectionChanged">
-                                        <i:InvokeCommandAction Command="{Binding GenderSelectionChangedCommand}" 
-                                                               CommandParameter="{Binding ElementName=GenderListBox}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
+                                     Height="40" HorizontalAlignment="Left" Margin="0 10"
+                                     SelectedValuePath="Tag"
+                                     SelectedValue="{Binding Gender, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                     Validation.ErrorTemplate="{StaticResource ErrorTemplate}">
 
                                 <ListBoxItem Width="100" Tag="Nam">
                                     <StackPanel Orientation="Horizontal" Margin="6 0">
@@ -137,22 +154,21 @@
 
                         <Grid Grid.Column="1" Grid.Row="5">
                             <DatePicker Height="40"
-                                        SelectedDate="{Binding BirthDate, UpdateSourceTrigger=PropertyChanged}"
+                                        SelectedDate="{Binding BirthDate, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                         materialDesign:HintAssist.Hint="01/01/2000"
                                         materialDesign:HintAssist.IsFloating="False"
-                                        Style="{StaticResource MaterialDesignOutlinedDatePicker}" 
+                                        Style="{StaticResource ValidatedDatePicker}" 
                                         Padding="10" FontSize="12" Language="vi-VN"/>
                         </Grid>
 
                         <Grid Grid.Column="1" Grid.Row="6">
                             <DatePicker Height="40"
-                                        SelectedDate="{Binding HireDate, UpdateSourceTrigger=PropertyChanged}"
+                                        SelectedDate="{Binding HireDate, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                         materialDesign:HintAssist.Hint="01/01/2000"
                                         materialDesign:HintAssist.IsFloating="False"
-                                        Style="{StaticResource MaterialDesignOutlinedDatePicker}" 
+                                        Style="{StaticResource ValidatedDatePicker}" 
                                         Padding="10" FontSize="12" Language="vi-VN"/>
                         </Grid>
-
 
                         <Grid Grid.Column="1" Grid.Row="7">
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom">
@@ -192,15 +208,10 @@
                             </StackPanel>
                         </Grid>
                     </Grid>
-
-
                 </Grid>
             </Border>
 
-
-
             <Grid Grid.Column="0">
-
                 <Ellipse Width="150" Height="150" 
                          HorizontalAlignment="Center" 
                          VerticalAlignment="Top"
@@ -222,13 +233,10 @@
                       HorizontalAlignment="Center"
                       Margin="0,100,0,0">
                     <TextBlock FontSize="14" Margin="0,10,0,0" TextAlignment="Justify" TextWrapping="Wrap"
-                                   Text="Nhấp vào nút dưới để chọn ảnh cho nhân viên. Nếu không chọn, sẽ hiển thị ảnh mặc định như hình bên trên.">
+                               Text="Nhấp vào nút dưới để chọn ảnh cho nhân viên. Nếu không chọn, sẽ hiển thị ảnh mặc định như hình bên trên.">
                     </TextBlock>
                 </Grid>
-                
-                
-                
-                
+
                 <Grid Width="50" Height="50"
                       VerticalAlignment="Center"
                       HorizontalAlignment="Center"
@@ -244,11 +252,9 @@
                         <Button.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                 <GradientStop Color="#FFD3CECE"/>
-                                <GradientStop Color="#FFE5DADA" Offset="1"/>
+                                <GradientStop Color="#FFE8E8E8" Offset="1"/>
                             </LinearGradientBrush>
                         </Button.Background>
-
-
                     </Button>
 
                     <Image Source="{StaticResource UploadImage}"
@@ -258,13 +264,8 @@
                            IsHitTestVisible="False">
                     </Image>
                 </Grid>
-                
             </Grid>
-            
         </Grid>
-
-
-
 
         <Grid x:Name="DragZone"
               Background="Transparent"
@@ -273,7 +274,7 @@
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseLeftButtonDown">
                     <i:InvokeCommandAction Command="{Binding DragWindowCommand}"
-                                       CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
+                                           CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </Grid>
