--- a/Martify/Resources/XAML/StyleRes.xaml
+++ b/Martify/Resources/XAML/StyleRes.xaml
@@ -1,11 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    
                     xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
 
-
     <Style x:Key="Page_RadarReveal_Style" TargetType="{x:Type UserControl}">
-
         <Setter Property="Opacity" Value="0"/>
         <Setter Property="OpacityMask">
             <Setter.Value>
@@ -15,37 +12,28 @@
                 </RadialGradientBrush>
             </Setter.Value>
         </Setter>
-
         <Style.Triggers>
             <EventTrigger RoutedEvent="Loaded">
                 <BeginStoryboard>
                     <Storyboard>
-                        <DoubleAnimation Storyboard.TargetProperty="Opacity"
-                                         From="0" To="1" Duration="0:0:0.5" />
-
-                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.OpacityMask).(RadialGradientBrush.RadiusX)"
-                                         From="0" To="1.5" Duration="0:0:1.5">
+                        <DoubleAnimation Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:0.5" />
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.OpacityMask).(RadialGradientBrush.RadiusX)" From="0" To="1.5" Duration="0:0:1.5">
                             <DoubleAnimation.EasingFunction>
                                 <CubicEase EasingMode="EaseOut"/>
                             </DoubleAnimation.EasingFunction>
                         </DoubleAnimation>
-
-                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.OpacityMask).(RadialGradientBrush.RadiusY)"
-                                         From="0" To="1.5" Duration="0:0:1.5">
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.OpacityMask).(RadialGradientBrush.RadiusY)" From="0" To="1.5" Duration="0:0:1.5">
                             <DoubleAnimation.EasingFunction>
                                 <CubicEase EasingMode="EaseOut"/>
                             </DoubleAnimation.EasingFunction>
                         </DoubleAnimation>
-
                     </Storyboard>
                 </BeginStoryboard>
             </EventTrigger>
         </Style.Triggers>
     </Style>
 
-
     <Style x:Key="Page_CinematicFocus_Style" TargetType="{x:Type UserControl}">
-
         <Setter Property="Opacity" Value="0"/>
         <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
         <Setter Property="RenderTransform">
@@ -58,39 +46,27 @@
                 <BlurEffect Radius="20" KernelType="Gaussian"/>
             </Setter.Value>
         </Setter>
-
         <Style.Triggers>
             <EventTrigger RoutedEvent="Loaded">
                 <BeginStoryboard>
                     <Storyboard>
-                        <DoubleAnimation Storyboard.TargetProperty="Opacity"
-                                         From="0" To="1" Duration="0:0:0.6"/>
-
-                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleX)"
-                                         From="0.5" To="1" Duration="0:0:0.8">
+                        <DoubleAnimation Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:0.6"/>
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleX)" From="0.5" To="1" Duration="0:0:0.8">
                             <DoubleAnimation.EasingFunction>
                                 <CubicEase EasingMode="EaseOut"/>
                             </DoubleAnimation.EasingFunction>
                         </DoubleAnimation>
-                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleY)"
-                                         From="0.5" To="1" Duration="0:0:0.8">
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleY)" From="0.5" To="1" Duration="0:0:0.8">
                             <DoubleAnimation.EasingFunction>
                                 <CubicEase EasingMode="EaseOut"/>
                             </DoubleAnimation.EasingFunction>
                         </DoubleAnimation>
-
-                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.Effect).(BlurEffect.Radius)"
-                                         From="20" To="0" Duration="0:0:0.8"/>
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.Effect).(BlurEffect.Radius)" From="20" To="0" Duration="0:0:0.8"/>
                     </Storyboard>
                 </BeginStoryboard>
             </EventTrigger>
         </Style.Triggers>
     </Style>
-
-
-
-
-
 
     <Style x:Key="Page_SpiralInOut_Style" TargetType="{x:Type UserControl}">
         <Style.Setters>
@@ -105,84 +81,28 @@
                 </Setter.Value>
             </Setter>
         </Style.Setters>
-
         <Style.Triggers>
             <EventTrigger RoutedEvent="Loaded">
                 <BeginStoryboard>
                     <Storyboard>
-                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)" 
-                                     From="0" To="1" Duration="0:0:0.8"/>
-                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)" 
-                                     From="0" To="1" Duration="0:0:0.8"/>
-                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[1].(RotateTransform.Angle)" 
-                                     From="-180" To="0" Duration="0:0:0.8">
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)" From="0" To="1" Duration="0:0:0.8"/>
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)" From="0" To="1" Duration="0:0:0.8"/>
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[1].(RotateTransform.Angle)" From="-180" To="0" Duration="0:0:0.8">
                             <DoubleAnimation.EasingFunction>
                                 <BackEase EasingMode="EaseOut" Amplitude="0.3"/>
                             </DoubleAnimation.EasingFunction>
                         </DoubleAnimation>
-
                         <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="Opacity">
                             <DiscreteDoubleKeyFrame KeyTime="0:0:0" Value="0"/>
-
                             <LinearDoubleKeyFrame KeyTime="0:0:0.8" Value="1"/>
-
                             <LinearDoubleKeyFrame KeyTime="0:0:2" Value="1"/>
-
                             <LinearDoubleKeyFrame KeyTime="0:0:3" Value="0"/>
                         </DoubleAnimationUsingKeyFrames>
-
                     </Storyboard>
                 </BeginStoryboard>
             </EventTrigger>
         </Style.Triggers>
     </Style>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <SolidColorBrush x:Key="OptionMark.Static.Background" Color="#FFFFFFFF"/>
     <SolidColorBrush x:Key="OptionMark.Static.Border" Color="#FF707070"/>
@@ -328,19 +248,6 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ColumnHeaderGripperStyle" TargetType="{x:Type Thumb}">
-        <Setter Property="Width" Value="8"/>
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Cursor" Value="SizeWE"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Thumb}">
-                    <Border Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}"/>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
     <Style x:Key="DataGridColumnHeaderStyle" TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Background" Value="Transparent" />
@@ -350,12 +257,55 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
                     <Grid>
-                        <theme:DataGridHeaderBorder Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" IsClickable="{TemplateBinding CanUserSort}" IsPressed="{TemplateBinding IsPressed}" IsHovered="{TemplateBinding IsMouseOver}" Padding="{TemplateBinding Padding}" SeparatorBrush="{TemplateBinding SeparatorBrush}" SortDirection="{TemplateBinding SortDirection}" SeparatorVisibility="{TemplateBinding SeparatorVisibility}">
-                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        <theme:DataGridHeaderBorder Background="{TemplateBinding Background}" 
+                                                    BorderThickness="{TemplateBinding BorderThickness}" 
+                                                    BorderBrush="{TemplateBinding BorderBrush}" 
+                                                    IsClickable="{TemplateBinding CanUserSort}" 
+                                                    IsPressed="{TemplateBinding IsPressed}" 
+                                                    IsHovered="{TemplateBinding IsMouseOver}" 
+                                                    Padding="{TemplateBinding Padding}" 
+                                                    SeparatorBrush="{TemplateBinding SeparatorBrush}" 
+                                                    SortDirection="{TemplateBinding SortDirection}" 
+                                                    SeparatorVisibility="{TemplateBinding SeparatorVisibility}">
+
+                            <StackPanel Orientation="Horizontal" 
+                                        HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
+
+                                <ContentPresenter RecognizesAccessKey="True" 
+                                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
+                                                  VerticalAlignment="Center"/>
+
+                                <StackPanel x:Name="SortIcons" VerticalAlignment="Center" Margin="5,0,0,0">
+                                    <Path x:Name="SortArrowUp" 
+                                          Data="M 0,4 L 4,0 L 8,4 Z" 
+                                          Fill="#C0C0C0" 
+                                          Margin="0,0,0,2"
+                                          Width="8" Height="4" Stretch="Fill"/>
+
+                                    <Path x:Name="SortArrowDown" 
+                                          Data="M 0,0 L 4,4 L 8,0 Z" 
+                                          Fill="#C0C0C0" 
+                                          Width="8" Height="4" Stretch="Fill"/>
+                                </StackPanel>
+                            </StackPanel>
                         </theme:DataGridHeaderBorder>
-                        <!--<Thumb x:Name="PART_LeftHeaderGripper" HorizontalAlignment="Left" Style="{StaticResource ColumnHeaderGripperStyle}"/>
-                        <Thumb x:Name="PART_RightHeaderGripper" HorizontalAlignment="Right" Style="{StaticResource ColumnHeaderGripperStyle}"/>-->
                     </Grid>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="CanUserSort" Value="False">
+                            <Setter TargetName="SortIcons" Property="Visibility" Value="Collapsed"/>
+                        </Trigger>
+
+                        <Trigger Property="SortDirection" Value="Ascending">
+                            <Setter TargetName="SortArrowUp" Property="Fill" Value="#512DA8"/>
+                            <Setter TargetName="SortArrowDown" Property="Opacity" Value="0.3"/>
+                        </Trigger>
+                        <Trigger Property="SortDirection" Value="Descending">
+                            <Setter TargetName="SortArrowDown" Property="Fill" Value="#512DA8"/>
+                            <Setter TargetName="SortArrowUp" Property="Opacity" Value="0.3"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -496,7 +446,5 @@
             </MultiTrigger>
         </Style.Triggers>
     </Style>
-
-
 
 </ResourceDictionary>
