Refactor UI components and update image resources
- Removed unused image resources from `Martify.csproj` and added `minimize_program.png`.
- Simplified `WindowControlVM` by removing `MaximizeWindowCommand`.
- Updated `Employee.xaml` layout with a new button for adding employees.
- Enhanced `Products.xaml` with a new `DataGrid` and improved layout.
- Cleaned up `Products.xaml.cs` by removing the unused `PackIcon_ColorChanged` method.
- Introduced a custom button style in `WindowControl.xaml` for better UI consistency.

--- a/Martify/Views/Employee.xaml
+++ b/Martify/Views/Employee.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Martify.Views"
              xmlns:vm="clr-namespace:Martify.ViewModels"
-             
+             xmlns:uc="clr-namespace:Martify.Views"
              xmlns:cv="clr-namespace:Martify.Converters" 
              
              mc:Ignorable="d" 
@@ -24,12 +24,15 @@
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="1.5*"/>
         </Grid.RowDefinitions>
 
-
         <Grid Grid.Row="0">
+            <uc:WindowControl></uc:WindowControl>
+        </Grid>
+        <Grid Grid.Row="1">
             <Button Content="Thêm nhân viên" 
                     Style="{DynamicResource PrimaryButtonStyle}" 
                     Command="{Binding AddEmployeeCommand}"
@@ -38,7 +41,7 @@
                     Margin="0,0,25,0"/>
         </Grid>
 
-        <Border Grid.Row="1"
+        <Border Grid.Row="2"
                 Background="White"
                 CornerRadius="25"
                 Margin="10">
