--- a/Martify/Views/WindowControl.xaml
+++ b/Martify/Views/WindowControl.xaml
@@ -9,10 +9,32 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Name="ucWindowControl">
+    <UserControl.Resources>
+        <Style x:Key="CompletelyCustomButtonStyle" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="0"
+                            CornerRadius="5">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Margin" Value="2 10 10 10"/>
+            <Setter Property="Width" Value="30"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Background" Value="MediumSeaGreen"/>
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <Grid x:Name="Dragging_Zone" 
               Background="Transparent"
-              Height="40"
+              Height="50"
               VerticalAlignment="Top">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseLeftButtonDown">
@@ -22,33 +44,29 @@
                 </i:Interaction.Triggers>
                 <!-- Optional: Add title or icon here -->
         </Grid>
-        
+
         <StackPanel x:Name ="ControlButton"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
+                    Height="50" 
                     Margin="0,0,10,0" Orientation="Horizontal">
-            <StackPanel.Resources>
-                <Style TargetType="Button">
-                    <Setter Property="Margin" Value="2 15 2 10"/>
-                    <Setter Property="Width" Value="30"/>
-                    <Setter Property="Height" Value="25"/>
-                    <Setter Property="Background" Value="Lavender"/>
-                    <Setter Property="BorderBrush" Value="MediumPurple"/>
-                </Style>
-            </StackPanel.Resources>
             <Button Command="{Binding HideWindowCommand}"
-                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=UserControl}}" >
-                <materialDesign:PackIcon Kind="WindowMinimize" />
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=UserControl}}" 
+                    Background="transparent"
+                    Height="30" Width="30"
+                    Style="{StaticResource CompletelyCustomButtonStyle}">
+                <Image Height="20"
+                       Width="20"
+                       Source="/Resources/Images/minimize_program.png"/>
+               
             </Button>
-            <Button Command="{Binding MaximizeWindowCommand}"
-                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=UserControl}}">
-                <materialDesign:PackIcon Kind="WindowMaximize" />
-            </Button>
-
+            
             <Button Command="{Binding CloseWindowCommand}"
-                    CommandParameter="{Binding ElementName=ucWindowControl}">
-                <materialDesign:PackIcon Kind="CloseBox" />
-                
+                    CommandParameter="{Binding ElementName=ucWindowControl}"
+                    Background="transparent"
+                    Height="30" Width="30"
+                    Style="{StaticResource CompletelyCustomButtonStyle}">
+                <Image Source="/Resources/Images/close_program.png"/>
             </Button>
 
         </StackPanel>
