Add ui settings

--- a/Martify/Resources/XAML/ViewRes.xaml
+++ b/Martify/Resources/XAML/ViewRes.xaml
@@ -26,6 +26,8 @@
         <view:LoginErrorPopup />
     </DataTemplate>
 
-
+    <DataTemplate DataType="{x:Type vm:SettingsVM}">
+        <view:Settings />
+    </DataTemplate>
 
 </ResourceDictionary>
